# spinal-fairness

./: .env.example  .gitignore  README.md  TODO.md  VERIFY-nnunet-plans.md  biased-ruler-v2.md  data-todo.txt  idea.md  paper_issues.md  pyproject.toml
docs/: README.md  comparison.md  statistical_testing.md
docs/demographic-probing-of-medical-image-encoders/: encoder-recommendations.md  findings.md  methodology.md  papers.md  sketch.md
docs/eda/: data-distribution.md  segmentation-volumes.md
docs/faimi/: content-cut-from-paper.md  gold-silver-comparability.md  paper-framing.md  submission-requirements.md
docs/fairness/: biased-ruler-explainer.md  biased-ruler-silver-source.md  dpd-dir-redefinition.md  fairness-runs.md  hd95-outliers.md  related-work.md
docs/meetings/: 01-05-2026  11-03-2026  11-04-2026  12-06-2026  14-04-2026
docs/nnunet/: 01_setup.md  02_dataset_preparation.md  03_training.md  04_experiment_tracking.md  04_inference.md  05_inference.md  05_model_selection.md  06_smoke_test.md  (+3 more)
jobs/: ensemble_and_postprocess.sh  fairness_analysis.sh  fairness_evaluate.sh  fairness_suite.sh  fetch_mri_core.sh  finish_silver.sh  predict.sh  resubmit_gold_2d_f1.sh  resubmit_silver.sh  smoke_test.err  smoke_test.out  smoke_test_2d.sh  submit.sh  submit_3d.sh  submit_fairness.sh  submit_predict.sh  train.sh  validate.sh
outputs/: eval_ds1_on_gold.csv  eval_ds2_on_gold.csv  eval_ds2_vs_ds3.csv  eval_ds3_on_gold.csv  eval_global.csv  eval_ruler_silver.csv
paper/: main.tex  mybibliography.bib  samplepaper.tex
scratch/: cervical-spine-fairness-project-plan.md  data-todo.txt  data_distribution_and_confounders.md  eda_plan.md  fairness_study_plan.md  sex_balancing.md
scripts/: cohort_composition.py  gold_silver_comparability.py  plot_age_trend.py
src/: mri_visualization.py
submission/: .gitignore  main.tex  mybibliography.bib
(+677 files in other folders)
