[project]
name = "spinal-fairness"
version = "0.1.0"
description = "Fairness in Cervical Spine MRI Segmentation"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "einops>=0.8.0",
    "matplotlib>=3.10.8",
    "nibabel>=5.3.3",
    "nilearn>=0.13.1",
    "nnunetv2>=2.7.0",
    "numpy>=2.4.2",
    "patito>=0.8.6",
    "pillow>=10.0.0",
    "polars>=1.38.1",
    "pyarrow>=23.0.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "ruff>=0.15.0",
    "scikit-learn>=1.8.0",
    "scikit-posthocs>=0.12.0",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "wandb>=0.25.1",
]
